--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: New pull request ${{ github.event.path }}
+        message: New pull request ${{ github.event_path }}
 
 
 
